tests/error/misc_errors/unsupported_const.py
from guppylang.std.builtins import array
from tests.util import compile_guppy


@compile_guppy
def foo() -> None:
    x = "foo"
