tests/error/misc_errors/unsupported_const.err
Error: Unsupported constant (at $FILE:7:8)
  | 
5 | @compile_guppy
6 | def foo() -> None:
7 |     x = "foo"
  |         ^^^^^ Type `str` is not supported

Guppy compilation failed due to 1 previous error
